--- a/recipes/buttermilk_pancakes.html
+++ b/recipes/buttermilk_pancakes.html
@@ -1,3 +1,4 @@
+<a href="../index.html">Home Page</a>
 <h1>Buttermilk Pancakes</h1>
 <img src="../images/Buttermilk-Pancakes.png" alt="Buttermilk Pancakes with syrup">
 <h2>Ingredients</h2>
