--- a/recipes/fried_chicken.html
+++ b/recipes/fried_chicken.html
@@ -1,3 +1,4 @@
+<a href="../index.html">Home Page</a>
 <h1>Fried Chicken</h1>
 <img src="../images/Fried-Chicken.png" alt="Fried Chicken">
 <h2>Ingredients</h2>
