--- a/recipes/salmon_sinigang.html
+++ b/recipes/salmon_sinigang.html
@@ -1,3 +1,4 @@
+<a href="../index.html">Home Page</a>
 <h1>Salmon Sinigang</h1>
 <img src="../images/Salmon-Sinigang.png" alt="Salmon Sinigang">
 <h2>Ingredients</h2>
