CSS added to recipes

--- a/recipes/buttermilk_pancakes.html
+++ b/recipes/buttermilk_pancakes.html
@@ -1,20 +1,32 @@
-<a href="../index.html">Home Page</a>
-<h1>Buttermilk Pancakes</h1>
-<img src="../images/Buttermilk-Pancakes.png" alt="Buttermilk Pancakes with syrup">
-<h2>Ingredients</h2>
-<ul>
-    <li><strong>Flour</strong>: All-purpose flour contains gluten, which gives the buttermilk pancakes structure and pleasant chewiness</li>
-    <li><strong>Sugar</strong>: Just three tablespoons of white sugar should be enough to lend subtle sweetness. Remember, you'll be adding a lot more sugar if you top the pancakes with syrup or molasses!</li>
-    <li><strong>Leaveners</strong>: Baking powder and baking soda act as leaveners(a substance that releases gas when mixed with other ingredients, causing the batter to rise to fluffy perfection).</li>
-    <li><strong>Salt</strong>: You definetely don't want to skip adding a small amount of salt - the buttermilk pancakes will takaste bland without it.</li>
-    <li><strong>Buttermilk</strong>: Of course, you'll need buttermilk for buttermilk pancakes! This recipe calls for three whole cups.</li>
-    <li><strong>Milk</strong>: Wholemilk helps create the perfect batter consistency and cuts some of the buttermilk's acidity.</li>
-    <li><strong>Eggs</strong>: Three whole eggs add structure and rich flavor to the buttermilk pancakes.</li>
-    <li><strong>Butter</strong>: Melted butter lends flavor and keeps the pancakes nice and moist.</li>
-</ul>
-<h2>Steps</h2>
-<ol>
-    <li><strong>Mix the dry ingredients</strong>: Combine flour, sugar, baking powder, baking soda, and salt in a large bowl.</li>
-    <li><strong>Mix the wet ingredients</strong>: Beat the buttermilk, milk, eggs, and melted butter together in a separate bowl. Do not combine the wet and dry ingredients until right before you cook the pancakes.</li>
-    <li><strong>Make the pancakes</strong>: Add the wet ingredients to the dry ingredients and mix with a wooden spoon or fork until the mixtures are just-blended. Scoop the batter onto a hot, oiled griddle and cook until the pancake is bubbly on the top. Flip with a spatula and cook until both sides are brown</li>
-</ol>
+<!--Buttermilk Pancakes-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="../styles.css">
+    <meta charset="UTF-8">
+    <title>Buttermilk Pancakes Recipe</title>
+</head>
+<body>
+    <a class="home-page" href="../index.html">Home Page</a>
+    <h1 class="food-title">Buttermilk Pancakes</h1>
+    <img class="food-img" src="../images/Buttermilk-Pancakes.png" alt="Buttermilk Pancakes with syrup">
+    <h2>Ingredients</h2>
+    <ul>
+        <li><strong>Flour</strong>: All-purpose flour contains gluten, which gives the buttermilk pancakes structure and pleasant chewiness</li>
+        <li><strong>Sugar</strong>: Just three tablespoons of white sugar should be enough to lend subtle sweetness. Remember, you'll be adding a lot more sugar if you top the pancakes with syrup or molasses!</li>
+        <li><strong>Leaveners</strong>: Baking powder and baking soda act as leaveners(a substance that releases gas when mixed with other ingredients, causing the batter to rise to fluffy perfection).</li>
+        <li><strong>Salt</strong>: You definetely don't want to skip adding a small amount of salt - the buttermilk pancakes will takaste bland without it.</li>
+        <li><strong>Buttermilk</strong>: Of course, you'll need buttermilk for buttermilk pancakes! This recipe calls for three whole cups.</li>
+        <li><strong>Milk</strong>: Wholemilk helps create the perfect batter consistency and cuts some of the buttermilk's acidity.</li>
+        <li><strong>Eggs</strong>: Three whole eggs add structure and rich flavor to the buttermilk pancakes.</li>
+        <li><strong>Butter</strong>: Melted butter lends flavor and keeps the pancakes nice and moist.</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><strong>Mix the dry ingredients</strong>: Combine flour, sugar, baking powder, baking soda, and salt in a large bowl.</li>
+        <li><strong>Mix the wet ingredients</strong>: Beat the buttermilk, milk, eggs, and melted butter together in a separate bowl. Do not combine the wet and dry ingredients until right before you cook the pancakes.</li>
+        <li><strong>Make the pancakes</strong>: Add the wet ingredients to the dry ingredients and mix with a wooden spoon or fork until the mixtures are just-blended. Scoop the batter onto a hot, oiled griddle and cook until the pancake is bubbly on the top. Flip with a spatula and cook until both sides are brown</li>
+    </ol>
+</body>
+
+</html>
