--- a/recipes/salmon_sinigang.html
+++ b/recipes/salmon_sinigang.html
@@ -1,29 +1,41 @@
-<a href="../index.html">Home Page</a>
-<h1>Salmon Sinigang</h1>
-<img src="../images/Salmon-Sinigang.png" alt="Salmon Sinigang">
-<h2>Ingredients</h2>
-<ul>
-    <li>1 1/2 lbs. salmon fillet</li>
-    <li>3 10g pouches Knorr Sinigang na Isda mix</li>
-    <li>1 bunch kangkong</li>
-    <li>10 pieces snake beans</li>
-    <li>2 medium ripe tomato</li>
-    <li>6 to 8 pieces okra</li>
-    <li>6 ounces Daikon radish</li>
-    <li>1 medium yellow onion</li>
-    <li>4 pieces long green peppers</li>
-    <li>3 tablespoons patis</li>
-    <li>1/4 teaspoon ground black pepper</li>
-    <li>1 1/2 quart water</li>
-</ul>
-<h2>Steps</h2>
-<ol>
-    <li>Pour water in a cooking pot. Let boil.</li>
-    <li>Add tomato, onion, and Daikon radish. Cover and cook for 5 minutes.</li>
-    <li>Add salmon fillet. Cook for 2 minutes.</li>
-    <li>Add Knorr Sinigang na Isda mix. Stir.</li>
-    <li>Put the long green peppers into the pot along with the okra, and snake beans. Cover the pot. Cook in medium heat for 2 minutes.</li>
-    <li>Add kangkong stalks. Season with patis and ground black pepper. Cook for 2 to 3 minutes.</li>
-    <li>Add kangkong leaves. Turn the heat off. Cover the pot and let it stay for 5 minutes.</li>
-    <li>Transfer to a serving bowl. Serve!</li>
-</ol>
+<!--Salmon Sinigang-->
+<html>
+<head>
+    <link rel="stylesheet" href="../styles.css">
+    <meta charset="UTF-8">
+    <title>Salmon Sinigang Recipe</title>
+</head>
+
+<body>
+    <a class="home-page"href="../index.html">Home Page</a>
+    <h1 class="food-title">Salmon Sinigang</h1>
+    <img class="food-img"src="../images/Salmon-Sinigang.png" alt="Salmon Sinigang">
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 1/2 lbs. salmon fillet</li>
+        <li>3 10g pouches Knorr Sinigang na Isda mix</li>
+        <li>1 bunch kangkong</li>
+        <li>10 pieces snake beans</li>
+        <li>2 medium ripe tomato</li>
+        <li>6 to 8 pieces okra</li>
+        <li>6 ounces Daikon radish</li>
+        <li>1 medium yellow onion</li>
+        <li>4 pieces long green peppers</li>
+        <li>3 tablespoons patis</li>
+        <li>1/4 teaspoon ground black pepper</li>
+        <li>1 1/2 quart water</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Pour water in a cooking pot. Let boil.</li>
+        <li>Add tomato, onion, and Daikon radish. Cover and cook for 5 minutes.</li>
+        <li>Add salmon fillet. Cook for 2 minutes.</li>
+        <li>Add Knorr Sinigang na Isda mix. Stir.</li>
+        <li>Put the long green peppers into the pot along with the okra, and snake beans. Cover the pot. Cook in medium heat for 2 minutes.</li>
+        <li>Add kangkong stalks. Season with patis and ground black pepper. Cook for 2 to 3 minutes.</li>
+        <li>Add kangkong leaves. Turn the heat off. Cover the pot and let it stay for 5 minutes.</li>
+        <li>Transfer to a serving bowl. Serve!</li>
+    </ol>
+</body>
+
+</html>
