--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Project: Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="Main-Page">Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/buttermilk_pancakes.html">Buttermilk Pancakes</a></li>
-        <li><a href="recipes/fried_chicken.html">Fried Chicken</a></li>
-        <li><a href="recipes/salmon_sinigang.html">Salmon Sinigang</a></li>
+        <li class="recipe"><a href="recipes/buttermilk_pancakes.html">Buttermilk Pancakes</a></li>
+        <li class="recipe"><a href="recipes/fried_chicken.html">Fried Chicken</a></li>
+        <li class="recipe"><a href="recipes/salmon_sinigang.html">Salmon Sinigang</a></li>
     </ul>
 </body>
 
