--- a/recipes/fried_chicken.html
+++ b/recipes/fried_chicken.html
@@ -1,21 +1,34 @@
-<a href="../index.html">Home Page</a>
-<h1>Fried Chicken</h1>
-<img src="../images/Fried-Chicken.png" alt="Fried Chicken">
-<h2>Ingredients</h2>
-<ul>
-    <li>30 saltine crackers</li>
-    <li>2 tablespoons all-purpose flour</li>
-    <li>2 tablespoons dry potato flakes</li>
-    <li>1 teaspoon seasoned salt</li>
-    <li>1/2 teaspoon ground black pepper</li>
-    <li>1 egg</li>
-    <li>6 skinless, boneless chicken breast halves</li>
-    <li>2 cups vegetable oil for frying</li>
-</ul>
-<h2>Steps</h2>
-<ol>
-    <li>Place crackers in a large resealable plastic bag; seal bag and crush crackers with a rolling pin until they are coarse crumbs. Add the flour, potato flakes, seasoned salt, and pepper and mix well.</li>
-    <li>Beat egg in a shallow dish or bowl. One by one, dredge chicken pieces in egg, then place in bag with crumb mixture. Seal bag and shake to coat.</li>
-    <li>Heat oil in a deep-fryer or large saucepan to 350 degrees F (175 degrees C).</li>
-    <li>Fry chicken, turning frequently, until golden brown and juices run clear, 15 to 20 minutes.</li>
-</ol>
+<!-- Fried Chicken-->
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="../styles.css">
+    <meta charset="UTF-8">
+    <title>Fried Chicken Recipe</title>
+</head>
+
+<body>
+    <a class="home-page" href="../index.html">Home Page</a>
+    <h1 class="food-title">Fried Chicken</h1>
+    <img class="food-img" src="../images/Fried-Chicken.png" alt="Fried Chicken">
+    <h2>Ingredients</h2>
+    <ul>
+        <li>30 saltine crackers</li>
+        <li>2 tablespoons all-purpose flour</li>
+        <li>2 tablespoons dry potato flakes</li>
+        <li>1 teaspoon seasoned salt</li>
+        <li>1/2 teaspoon ground black pepper</li>
+        <li>1 egg</li>
+        <li>6 skinless, boneless chicken breast halves</li>
+        <li>2 cups vegetable oil for frying</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Place crackers in a large resealable plastic bag; seal bag and crush crackers with a rolling pin until they are coarse crumbs. Add the flour, potato flakes, seasoned salt, and pepper and mix well.</li>
+        <li>Beat egg in a shallow dish or bowl. One by one, dredge chicken pieces in egg, then place in bag with crumb mixture. Seal bag and shake to coat.</li>
+        <li>Heat oil in a deep-fryer or large saucepan to 350 degrees F (175 degrees C).</li>
+        <li>Fry chicken, turning frequently, until golden brown and juices run clear, 15 to 20 minutes.</li>
+    </ol>
+</body>
+
+</html>
